2021-11-01  Karl Berry  <karl@tug.org>

	* tb132capsule.txt: new issue, 42:3.
	* lists-translations.txt (\GUT): new defn.
	* Makefile (testiss, lastiss, crossref_iss): now 132.

2021-11-01  Karl Berry  <karl@freefriends.org>

	* capaccum-keyword.pl (print_all_by_category): sort some
	categories by title, others just by issue.
	* capaccum-util.pl (sort_by_issue_page): new fn, moved ...
	* capaccum-author.pl: ... from here.

2021-10-31  Karl Berry  <karl@freefriends.org>

	* capaccum-keyword.pl (print_all_by_category): call
	lists_entry_trailer rather than lists_vol_iss_link,
	so that subtitle information will be included in the keyword list
	as it is in the others. (For obituaries, mainly.)
	* capconv.pl (transform_subtitles): remove pre_subtitle string, so
	editorial comments' subtitles don't start with 3 extra spaces.
	That doesn't align nicely in the lists* output files.
	* capout.pl (write_entries): instead, double the between-entry
	spaces for the subtitles in the per-issue contents*.html files.

	* caputil.pl (debug_list, backtrace): new debug routines.
	* capaccum-util.pl: doc.

	* tb131capsule.txt (interviews): add video links.
	* tb105capsule.txt (beet): avoid extra spaces before volume numbers.
	* tb130capsule.txt (hagen-*): add ConTeXt category.

	* tb94capsule.txt (pres),
	* tb105capsule.tex (pres),
	* tb112capsule.txt (beet): add names in subtitle.
	* tb192capsule.txt (beet),
	* tb113capsule.txt (beet),
	* tb121capsule.txt (beet),
	* tb130capsule.txt (beet): add Obituary category, names.

2021-09-30  Karl Berry  <karl@freefriends.org>

	* cr-do-issue: when verbose, pass -D to captub.
	* Makefile (cro-clean, cro-scratch-clean): new targets.

2021-09-28  Karl Berry  <karl@freefriends.org>

	Prepare for 42:2 (tb131) publication.
	
	* Makefile (more_options): show --webroot=/ as commented-out
	value to disable url validation.
	(testiss, lastiss, crossref_iss): 131.
	* lists-translations.txt (XSLT): new abbrev.
	* lists-unifications.txt,