@@ -60,23 +60,31 @@ sub LaTeX_ToUnicode_convert_hook {
   $string =~ s/\\ConTeXt$endcw/ConTeXt/g;
   $string =~ s/\\Dash$endcw/\\x{2014}/g; # em dash
   $string =~ s/\\GNU$endcw/GNU/g;
+  $string =~ s/\\HarfBuzz$endcw/HarfBuzz/g;
   $string =~ s/\\HTML$endcw/HTML/g;
   $string =~ s/\\ISBN$endcw/ISBN/g;
-  $string =~ s/\\LUAMETATEX$endcw/LuaMetaTeX/g;
+  $string =~ s/\\LuaLaTeX$endcw/LuaLaTeX/g;
   $string =~ s/\\MathML$endcw/MathML/g;
   $string =~ s/\\MFB$endcw/The Metafontbook/g;
   $string =~ s/\\MPLIB$endcw/MPLIB/g;
   $string =~ s/\\OPmac$endcw/OPmac/g;
   $string =~ s/\\OpTeX$endcw/OpTeX/g;
   $string =~ s/\\PDF$endcw/PDF/g;
+  $string =~ s/\\PS$endcw/PostScript/g;
   $string =~ s/\\TB$endcw/The TeXbook/g;
   $string =~ s/\\TEI$endcw/TEI/g;
-  $string =~ s/\\TEX$endcw/TeX/g; # for ConTeXt-ish article
   $string =~ s/\\TUB$endcw/TUGboat/g;
   $string =~ s/\\TikZ$endcw/TikZ/g;
   $string =~ s/\\WEB$endcw/WEB/g;
   $string =~ s/\\XML$endcw/XML/g;
   $string =~ s/\\XSLT$endcw/XSLT/g;
+  #
+  # ConTeXt all-caps.
+  $string =~ s/\\CONTEXT$endcw/ConTeXt/g;
+  $string =~ s/\\LUA$endcw/Lua/g;
+  $string =~ s/\\LUAMETATEX$endcw/LuaMetaTeX/g;
+  $string =~ s/\\METAPOST$endcw/MetaPost/g;
+  $string =~ s/\\TEX$endcw/TeX/g;
   #
   $string =~ s/\\break$endcw/ /g;
   $string =~ s/\\dash$endcw/\\x{2013}/g; # en dash
@@ -124,6 +132,9 @@ sub LaTeX_ToUnicode_convert_hook {
   $string =~ s/\\bblnov{}/Nov./g;
   $string =~ s/\\bbldec{}/Dec./g;
   
+  # voss bibliographies.
+  $string =~ s/\\Lpack//g;
+
   # ignore {abstract} environment markers.
   $string =~ s,\\(begin|end)$endcw\{abstract\}\s*,,g;
   
