@@ -1,3 +1,10 @@
+2021-11-01  Karl Berry  <karl@freefriends.org>
+
+	* ltx2crossrefxml-tugboat.cfg (\CONTEXT, etc.): more ConTeXt
+	and other cs's.
+	
+	* tb130capsule.txt (Maggi, Wright x 2): failed to correct subjects.
+
 2021-09-30  Karl Berry  <karl@freefriends.org>
 
 	* README-process.txt: landing page update when previous
